RFC-004 ingestion and RFC-007 optimization
Simplified API endpoint to use only a single phrase per API call.

Used granularity on the server side to limit the data sent over the
wire.

Added ingestion flow.
